--- a/Battleship/style.css
+++ b/Battleship/style.css
@@ -16,27 +16,17 @@ span {
     width: 50px;
 }
 
-/* @keyframes spinning {
-    0% {
-        transform: rotate(0deg)
-    }
-
-    50% {
-        transform: rotate(180deg)
-    }
-
-    100% {
-        transform: rotate(360deg)
-    }
-}
-
-#small-asteroid {
-    animation: 2s spinning;
-} */
-
 #start-game {
     position: absolute;
     height: 100vh;
     width: 100vw;
     background-color: black;
+}
+
+#divEnd {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    background-color: blue;
+    opacity: 0;
 }
