--- a/Battleship/style.css
+++ b/Battleship/style.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     justify-content: center;
     align-content: center;
-    background-color: black;
+    /* background-color: black; */
 }
 
 span {
